@@ -1,7 +1,7 @@
 ﻿using System;
 using System.Collections.Generic;
 
-namespace Phenix.StorageAlgorithm.StackStorageLocation
+namespace Phenix.StorageAlgorithm.StackInventory
 {
     /// <summary>
     /// 挑货
