@@ -1,0 +1,34 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<ClassDiagram MajorVersion="1" MinorVersion="1">
+  <Class Name="Phenix.StorageAlgorithm.StackInventory.ChooseGoods">
+    <Position X="0.5" Y="0.5" Width="1.5" />
+    <Compartments>
+      <Compartment Name="Fields" Collapsed="true" />
+    </Compartments>
+    <TypeIdentifier>
+      <HashCode>AAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAABAAAA=</HashCode>
+      <FileName>StackInventory\ChooseGoods.cs</FileName>
+    </TypeIdentifier>
+  </Class>
+  <Class Name="Phenix.StorageAlgorithm.StackInventory.GroupGoods">
+    <Position X="2.25" Y="0.5" Width="1.5" />
+    <Compartments>
+      <Compartment Name="Fields" Collapsed="true" />
+    </Compartments>
+    <TypeIdentifier>
+      <HashCode>ABABAAEBAIAAAAAAAAEAAAAAACAAAgAAAAAgAAAAAAA=</HashCode>
+      <FileName>StackInventory\GroupGoods.cs</FileName>
+    </TypeIdentifier>
+    <ShowAsCollectionAssociation>
+      <Property Name="GoodsList" />
+    </ShowAsCollectionAssociation>
+  </Class>
+  <Interface Name="Phenix.StorageAlgorithm.StackInventory.IGoods">
+    <Position X="5" Y="0.5" Width="1.5" />
+    <TypeIdentifier>
+      <HashCode>AAACAACAAAAAAAAAAAAAAAAAACAAAgAEAAAAAAAAAAA=</HashCode>
+      <FileName>StackInventory\IGoods.cs</FileName>
+    </TypeIdentifier>
+  </Interface>
+  <Font Name="Microsoft YaHei UI" Size="9" />
+</ClassDiagram>
