@@ -1,0 +1,9 @@
+﻿Choose Goods for Stack Inventory
+栈式库存的挑货方法
+
+采取重叠式堆码、堆垛工具为叉车的仓库，货位按“区排位”编排，比如编号A0101代表A区01排01位。一个货位上可以叠高1～4捆货物。
+一个排上连续一个方向上布置有多个货位，采取栈式存取货物，如要提取内侧货位货物前必须先将外侧货位货物搬走，一排上先进后出。
+
+为满足客户申请出库或过户时的挑货条件，以及仓库自身尽可能降低倒垛率、低能耗的要求，本方法改造了分组背包问题动态规划算法。
+通过算法得出一组在挑货重量范围内足发（就低）或不超发（就高）的最佳组合，即挑货清单。
+挑货条件要求，包含要匹配上必要的属性，比如品名、规格、卡号等，挑出货物总重应该落在一个指定的重量范围内，要么足发（就低），要么不超发（就高）。
