@@ -1,31 +1,0 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ClassDiagram MajorVersion="1" MinorVersion="1">
-  <Class Name="Phenix.StorageAlgorithm.StackStorageLocation.ChooseGoods">
-    <Position X="4" Y="0.5" Width="1.5" />
-    <Compartments>
-      <Compartment Name="Fields" Collapsed="true" />
-    </Compartments>
-    <TypeIdentifier>
-      <HashCode>AAAAAAAAAAAAAIAAAAAAAAAAAAAAAAAAAAIAAAAAAAA=</HashCode>
-      <FileName>StackStorageLocation\ChooseGoods.cs</FileName>
-    </TypeIdentifier>
-  </Class>
-  <Class Name="Phenix.StorageAlgorithm.StackStorageLocation.GroupGoods">
-    <Position X="2.25" Y="0.5" Width="1.5" />
-    <Compartments>
-      <Compartment Name="Fields" Collapsed="true" />
-    </Compartments>
-    <TypeIdentifier>
-      <HashCode>ABABAAEAAAAAEAAAAAEAAAAAACAAAgAAQAAgAAAAAAA=</HashCode>
-      <FileName>StackStorageLocation\GroupGoods.cs</FileName>
-    </TypeIdentifier>
-  </Class>
-  <Interface Name="Phenix.StorageAlgorithm.StackStorageLocation.IGoods">
-    <Position X="0.5" Y="0.5" Width="1.5" />
-    <TypeIdentifier>
-      <HashCode>AAACAACAAAAAAAAAAAAAAAAAACAAAgAEAAAAAAAAAAA=</HashCode>
-      <FileName>StackStorageLocation\IGoods.cs</FileName>
-    </TypeIdentifier>
-  </Interface>
-  <Font Name="Microsoft YaHei UI" Size="9" />
-</ClassDiagram>
